--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@
     flex-direction: column-reverse;
 }
 
+.card-body {
+    margin-bottom: 1rem;
+}
+
 table {
     font-size: small;
 }
@@ -43,6 +47,34 @@ th~th,
 td~td {
     text-align: center;
 }
+
+
+.my_accordion {
+
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.active,
+.my_accordion:hover {
+    background-color: #ccc;
+}
+
+.my_panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+}
+
 
 @media screen and (min-width:575px) {
 
