--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 * {
     font-family: 'Roboto', sans-serif;
-    /* border: 1px dashed red; */
+    border: 1px dashed red;
 }
 
 /* body {
@@ -11,14 +11,14 @@
 } */
 
 .side_bar {
-    height: 100%;
+
     width: fit-content;
 }
 
 #site_main {
     display: flex;
     flex-direction: row;
-    height: 900px;
+    /* height: 900px; */
 }
 
 .main_top {
@@ -77,7 +77,9 @@ td~td {
     transition: max-height 0.3s ease-out;
 }
 
-.check_item {
+.check_item,
+.month,
+.link {
     border: 1px solid black;
     padding: .5rem;
     gap: .5rem;
