--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,14 +102,14 @@ nav>div {
     background-color: var(--db-primary);
     color: var(--db-lightest);
     padding: 1rem 1rem;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 
 .main_top_left,
 .main_top_center,
 .main_top_right {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     display: flex;
 
 
