--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,7 @@ nav>div {
 #site_main {
     display: flex;
     flex-direction: row;
+    background-color: var(--db-lighter);
     /* height: 900px; */
 }
 
@@ -177,8 +178,8 @@ nav>div {
 }
 
 .my_card_title {
-    background-color: var(--db-light);
-    border-bottom: 1px solid rgb(197, 197, 197);
+    background-color: var(--db-lighter);
+    border-bottom: 1px solid rgb(217, 217, 217);
 }
 
 .card {
@@ -239,15 +240,18 @@ td~td {
 
 .my_accordion {
 
-    color: #444;
+    background-color: #fff;
+    color: var(--db-dark);
     cursor: pointer;
-    padding: 18px;
+    padding: 1rem 2rem;
     width: 100%;
-    border: none;
+    border: 1px solid var(--db-light);
+    border-top: none;
     text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
+    outline: #ccc;
+    font-size: 1rem;
+    transition: 0.3s;
+
 }
 
 .active,
@@ -257,10 +261,11 @@ td~td {
 
 .my_panel {
     padding: 0 18px;
+    display: none;
     background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
+    overflow: auto;
+    border: 1px solid var(--db-light);
+
 }
 
 .check_item,
