--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,10 +285,14 @@ td~td {
 .check_item,
 .month,
 .link {
-    border: 1px solid black;
-    padding: .5rem;
+    border: 1px solid var(--db-light);
+    padding: 1rem;
     gap: .5rem;
     display: flex;
+}
+
+.card_title {
+    padding: 0 1rem;
 }
 
 /* #endregion main */
